updated to new organization name

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>ob.dataway</groupId>
+  <groupId>xyz.meldlabs.dataway</groupId>
   <artifactId>dwserver</artifactId>
   <version>1.0.0</version>
 
@@ -73,7 +73,7 @@
         <configuration>
           <archive>
             <manifest>
-              <mainClass>ob.dataway.App</mainClass>
+              <mainClass>xyz.meldlabs.dataway.App</mainClass>
             </manifest>
           </archive>
         </configuration>
@@ -84,7 +84,7 @@
         <configuration>
           <archive>
             <manifest>
-              <mainClass>ob.dataway.App</mainClass>
+              <mainClass>xyz.meldlabs.dataway.App</mainClass>
             </manifest>
           </archive>
           <descriptorRefs>
